# huffman-algorithm

./: LICENSE  README.md  pyproject.toml
huffman/: __init__.py  huffman.py
tests/: test_huffman.py
