[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huffman-algorithm"
version = "1.0.0"
authors = [
    {name = "Ugo Brocard", email="ugo.brocard.official+contact@gmail.com"},
]
description = "Python Huffman Algorithm Implementation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://www.github.com/ugo-brocard/huffman-algorithm"

[tool.hatch.build.targets.wheel]
packages = ["huffman"]